Code cleaned up by intellij idea